# tnnlib

./: .bazeliskrc  .bazelrc  .gitignore  .mergify.yml  .teamcity-mappings.properties  .travis.yml  BUILD  BUILD.toolchain  HERMETIC_TOOLCHAIN.md  LICENSE  MODULE.bazel  MODULE.bazel.opencl  README.md  WORKSPACE  appveyor.yml  build.sh  hermetic_llvm_toolchain.bzl  mergify.yml  opencl_kernel.bzl  range-v3.BUILD  test_hermetic_toolchain.sh
.circleci/: config.yml
.github/workflows/: ai-code-review.yml  code_review.yml  cr.yml
ManualTests/: BUILD
ManualTests/src/: Test.cpp
NeuralNetwork/ActivationFunction/: BUILD  Binary.h  BiopolarSigmoidFunction.h  LogScaleSoftmaxFunction.h  ReluFunction.h  SigmoidFunction.h  SoftmaxFunction.h  TanhFunction.h
NeuralNetwork/BackPropagation/: BPAsyncNeuralLayer.h  BPContext.h  BPConvolutionNeuralLayer.h  BPNeuralLayer.h  BPNeuron.h  BPPoolingNeuralLayer.h  BUILD  BepAlgorithm.h  BpCereal.h  BpMemento.h  BpttAlgorithm.h  ErrorFunction.h  Optimizers.h
OpenCL/: OpenCL.BUILD
SystemTests/: BUILD  PerceptronTest.cpp
doc/: documentation.md
libpng_config/: BUILD
ocr/: .gitattributes  BUILD
src/: .clang-format  .gitignore  BUILD  CMakeLists.txt  compile_commands.json  msvc_convert_to_sln.bat
src/.kdev4/: tnnlib_new_interface.kdev4
src/.svn/: wc.db
src/NeuralNetwork/: CMakeLists.txt  INeuralLayer.h  INeuralNetwork.h  NNException.h
src/NeuralNetwork/LearningAlgorithm/BackPropagation/: BPNeuralLayer.h  BPNeuron.h  BepAlgorithm.h  ErrorFunction.h  OutputNeuralLayer.h
src/NeuralNetwork/LearningAlgorithm/RBM/: ConstructiveDivergence.h
src/NeuralNetwork/NeuralLayer/: ComplexNeuralLayer.h  ConvolutionLayer.h  NeuralLayer.h  OpenCLNeuralLayer.h
src/NeuralNetwork/NeuralNetwork/: Config.h  INeuralLayer.h  NNException.h
src/NeuralNetwork/NeuralNetwork/LearningAlgorithm/BackPropagation/: BPNeuralLayer.h  BPNeuron.h  BepAlgorithm.h  ErrorFunction.h  OutputNeuralLayer.h
src/NeuralNetwork/NeuralNetwork/LearningAlgorithm/RBM/: ConstructiveDivergence.h
src/NeuralNetwork/NeuralNetwork/NeuralLayer/: NeuralLayer.h  OpenCLNeuralLayer.h
src/NeuralNetwork/NeuralNetwork/Neuron/: INeuron.h  Input.h  Neuron.h
src/NeuralNetwork/NeuralNetwork/Neuron/ActivationFunction/: Binary.h  BiopolarSigmoidFunction.h  IActivationFunction.h  LogScaleSoftmaxFunction.h  SigmoidFunction.h  SoftmaxFunction.h  TanhFunction.h  Threshold.h
src/NeuralNetwork/NeuralNetwork/Perceptron/: ComplexLayer.h  Perceptron.h
src/NeuralNetwork/NeuralNetwork/Perceptron/NeuralLayer/: ComplexLayer.h  NeuralLayer.h
src/NeuralNetwork/NeuralNetwork/RBM/: RBM.h
src/NeuralNetwork/NeuralNetwork/SOM/: INode.h  IPosition.h  K2DNeighbourhood.h  K2DPosition.h  KNode.h  KohonenMap.h
src/NeuralNetwork/NeuralNetwork/Serialization/: ComplexLayerMemento.h  NeuralLayerMemento.h  NeuronMemento.h  PerceptronMemento.h  Tuple.h
src/NeuralNetwork/NeuralNetwork/Utils/: Utils.h
src/NeuralNetwork/NeuralNetwork_ut/: CMakeLists.txt  main.cpp
src/NeuralNetwork/NeuralNetwork_ut/NeuralNetwork/Neuron/: MockedNeuron.h  NeuronTest.cpp  NeuronTest.h
src/NeuralNetwork/NeuralNetwork_ut/NeuralNetwork/Neuron/ActivationFunction/: BinaryTest.cpp  BinaryTest.h  MockedActivationFunction.h  ThresholdTest.cpp  ThresholdTest.h
src/NeuralNetwork/NeuralNetwork_ut/NeuralNetwork/Perceptron/: PerceptronTest.cpp  PerceptronTest.h
src/NeuralNetwork/NeuralNetwork_ut/NeuralNetwork/Perceptron/NeuralLayer/: MockedNeuralLayer.h
src/NeuralNetwork/NeuralNetwork_ut/Utilities/: GMockUtils.h
src/NeuralNetwork/Neuron/: INeuron.h  Input.h  Neuron.h
src/NeuralNetwork/Neuron/ActivationFunction/: Binary.h  BiopolarSigmoidFunction.h  IActivationFunction.h  SigmoidFunction.h  SoftmaxFunction.h  TanhFunction.h  Threshold.h
src/NeuralNetwork/Perceptron/: ComplexLayer.h  Perceptron.h
src/NeuralNetwork/SOM/: INeighbourhood.h  INode.h  IPosition.h  K2DNeighbourhood.h  KNode.h  KohonenMap.h
src/NeuralNetwork/Serialization/: ComplexLayerMemento.h  NeuralLayerMemento.h  NeuronMemento.h  PerceptronMemento.h  Tuple.h
src/NeuralNetwork/Utils/: Utils.h
src/NeuralNetwork/cmake/: FindOpenCL.cmake
src/NeuralNetwork/tests/: BUILD  CMakeLists.txt  ConvolutionLayerTest.cpp  PerceptronTest.cpp  TestConvolutionLayer.cpp  TestNeuron.cpp  main.cpp
src/NeuralNetwork/tests/etc/: xorXml.h
src/NeuralNetwork_ut/: CMakeLists.txt
src/NeuralNetwork_ut/NeuralNetwork/Neuron/: MockedNeuron.h  NeuronTest.cpp  NeuronTest.h
src/NeuralNetwork_ut/NeuralNetwork/Neuron/ActivationFunction/: BinaryTest.cpp  BinaryTest.h  MockedActivationFunction.h  ThresholdTest.cpp  ThresholdTest.h
src/NeuralNetwork_ut/NeuralNetwork/Perceptron/: PerceptronTest.cpp  PerceptronTest.h
src/NeuralNetwork_ut/NeuralNetwork/Perceptron/NeuralLayer/: MockedNeuralLayer.h
src/NeuralNetwork_ut/Utilities/: GMockUtils.h
src/Test/: BUILD  CMakeLists.txt
src/Test/src/: Test.cpp
src/Utilities/: CMakeLists.txt
src/Utilities/Design/: Decorator.h  Factory.h  Observervable.h  Singleton.h  StateMachine.h
src/Utilities/MPL/: Tuple.h  TypeList.h  TypeTraits.h
src/Utilities/Memory/: LRUCache.h
src/Utilities/StrUtil/: StrUtil.h
src/Utilities/System/: Time.cpp  Time.h
src/Utilities/Utilities/: AException.cpp
src/Utilities/Utilities/Design/: Decorator.h  Factory.h  Observervable.h  Singleton.h  StateMachine.h
src/Utilities/Utilities/MPL/: Tuple.h  TypeTraits.h
src/Utilities/Utilities/Math/: Math.cpp  Math.h
src/Utilities/Utilities/Memory/: LRUCache.h
src/Utilities/Utilities/StrUtil/: StrUtil.h
src/Utilities/Utilities/System/: Time.cpp  Time.h
src/doc/: CMakeLists.txt
src/doc/structural/: class_diagramm.uml  component_diagram.uml  design.txt  documentation.html  documentation.txt  neurallayer.txt  neuron.txt  perceptron.txt
src/libs/: BUILD  CMakeLists.txt  cereal_integration.cmake  range-v3_integration.cmake
src/libs/cereal/: cereal.hpp
src/ocr/: CMakeLists.txt
src/ocr/src/: Var.h  main.cpp
tests/: BUILD  ConvolutionLayerTest.cpp  OpenCLNeuralLayerTest.cpp  TestConvolutionLayer.cpp  TestNeuron.cpp  TestOpenCLNeuralLayer.cpp  main.cpp
(+161 files in other folders)
